--- a/app/src/main/res/menu/menu_navi.xml
+++ b/app/src/main/res/menu/menu_navi.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
-        <item android:id="@+id/access"
+        <item android:id="@+id/item_login"
             android:title="로그인"/>
 
-        <item android:id="@+id/email"
+        <item android:id="@+id/item_bookmark"
             android:title="즐겨찾기"/>
 
-        <item android:id="@+id/message"
+        <item android:id="@+id/item_location"
             android:title="전국 충전소 위치"/>
     </group>
 
