카카오 키워드 검색API

--- a/app/src/main/res/layout/activity_naver_login.xml
+++ b/app/src/main/res/layout/activity_naver_login.xml
@@ -10,7 +10,9 @@
         android:id="@+id/btn_naver_login"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.647"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="483dp" />
+        tools:layout_editor_absoluteX="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
