--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,20 +34,15 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <SearchView
-            android:id="@+id/searchView"
-            android:layout_width="290dp"
+            android:id="@+id/search_view"
+            android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/searchview_rounded"
             android:iconifiedByDefault="false"
-            android:padding="5dp"
-            android:queryBackground="@null"
-            android:queryHint="Search"
-            app:layout_constraintBottom_toBottomOf="@+id/map_view"
-            app:layout_constraintEnd_toEndOf="@+id/map_view"
-            app:layout_constraintHorizontal_bias="0.174"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.947"
             app:layout_constraintStart_toEndOf="@+id/navi_button"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/map_view"
             app:layout_constraintVertical_bias="0.011" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
